--- a/Parametrizador/Properties/Resources.resx
+++ b/Parametrizador/Properties/Resources.resx
@@ -142,11 +142,17 @@
   <data name="hsb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hsb.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hstext" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hstext.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="hsw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hsw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="maizena" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\maizena.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
