--- a/Parametrizador/Properties/Resources.resx
+++ b/Parametrizador/Properties/Resources.resx
@@ -148,11 +148,26 @@
   <data name="hsw" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hsw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgbertolino" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgbertolino.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgdavidson" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgdavidson.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgmanley" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgmanley.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgmoretto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgmoretto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="maizena" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\maizena.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="maria01_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\maria01-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
