--- a/Parametrizador/Properties/Resources.resx
+++ b/Parametrizador/Properties/Resources.resx
@@ -169,6 +169,9 @@
   <data name="maria01_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\maria01-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rosquinha" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rosquinha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
