Adição da descrição correta para o tipo Short Dough

--- a/Parametrizador/Short Dough/SDMain.resx
+++ b/Parametrizador/Short Dough/SDMain.resx
@@ -896,8 +896,8 @@
 </value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value>“Hard-sweet cookies” (pela tradução: biscoitos doces-duros): são biscoitos doces cuja massa possui alta formação de glúten, e, por isso, são extensíveis, porém pouco elásticos devido a adição de gordura e açúcar nas suas formulações. São também denominados de laminados doces;
+    <value>''Short dough cookies'' (pela tradução: biscoitos de massa curta): biscoitos caracterizados pelo tipo de massa da qual advém. A massa possui mínima formação de glúten, e, consequentemente, possuem pouca elasticidade e extensibilidade. Conhecidos como moldados, pela denominação brasileira; 
 
-A massa, após passar pelo processo de laminação por meio de rolos redutores até atingir a espessura de uma lâmina, segue para a etapa de estampagem por cortadores rotativos. Podem ser diferenciados por sabor, como laminado doce ou salgado. É o caso do Cream Cracker e Maizena.</value>
+Moldados ou rotativos: a massa é disposta e prensada por meio de rolos moldadores que possuem, em sua composição, cavidades contendo o desenho e formato desejados ao produto, a serem extraídos por meio de lonas. Estão presentes nessa classificação os biscoitos recheados e tortinhas.</value>
   </data>
 </root>
