Algumas correções em imagens e edições no layout

--- a/Parametrizador/Properties/Resources.resx
+++ b/Parametrizador/Properties/Resources.resx
@@ -184,4 +184,7 @@
   <data name="Sem_Título_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sem Título-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shortdough" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shortdough.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
