--- a/Parametrizador/Properties/Resources.resx
+++ b/Parametrizador/Properties/Resources.resx
@@ -196,4 +196,7 @@
   <data name="m-dias-branco-mdb_azul" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\m-dias-branco-mdb_azul.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logotiny" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logotiny.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
